--- a/package.json
+++ b/package.json
@@ -27,14 +27,18 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.6",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "http-status-codes": "^2.3.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/express-session": "^1.18.1",
     "@types/node": "^22.10.1",
+    "express": "^5.0.0",
     "typescript": "^5.7.2"
   }
 }
