--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./dist/main.js",
   "scripts": {
     "test:main": "node ./dev/clean-builds.js && npx tsc && node ./dist/main.js",
-    "prebuild": "node clean-builds.js",
+    "prebuild": "node ./dev/clean-builds.js",
     "build": "npx tsc"
   },
   "publishConfig": {
